@@ -1,3 +1,8 @@
+(9/09/14)
+=========
+
+· Added Other > Fix problems with Raspbian OS
+
 (4/09/14)
 =========
 
